syntax = "proto3";
option go_package = "/;protos";

package protos;

message UserJoin {
  string uuid = 1; // userçš„uuid
}